# Nautilus-hyprpaper-extension

./: README.md  meson.build
po/: LANGUAS  POTFILES  meson.build  ru.po  uk.po
src/: nautilus-hyprpaper.c
